<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtVwNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_nome_label"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp" />

    <EditText
        android:id="@+id/edtTxtNome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nome"
        android:minHeight="48dp"
        android:autofillHints="name"
        android:inputType="textPersonName"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintTop_toBottomOf="@id/txtVwNome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txtVwEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_email_label"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/edtTxtNome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTxtEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:minHeight="48dp"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintTop_toBottomOf="@id/txtVwEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnExibir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_clique"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/editTxtEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewResultadoNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/res_nome"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/btnExibir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewResultadoEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/res_email"
        app:layout_constraintTop_toBottomOf="@id/textViewResultadoNome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>